force-app/main/default/objects/ExternalDatabaseConfig__c/ExternalDatabaseConfig__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>External Database config</label>
</CustomObject>