force-app/main/default/objects/ExternalDatabaseConfig__c/fields/Dealer_Id__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Id__c</fullName>
    <label>Dealer_Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>