force-app/main/default/objects/ExternalDatabaseConfig__c/fields/Manufactor_Id__c.field-meta.xml
<CustomField>
    <fullName>Manufactor_Id__c</fullName>
    <label>Manufacturer_Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>